@@ -1,3 +1,7 @@
+2015-08-22  vaiorabbit
+
+	* nanovg_dll.c: Fixed include file name for Mac OS X.
+
 2015-07-16  vaiorabbit
 
 	* demo/qrc.rb: Added.
